[package]
name = "roguelike-tutorial"
version = "0.1.0"
authors = ["Tomas Sedovic <tomas@sedovic.cz>"]
edition = "2018"
license = "WTFPL"
readme = "README.adoc"

[badges]
maintenance = { status = "as-is" }


[dependencies]
tcod = { git= "https://github.com/tomassedovic/tcod-rs.git", features = ["serialization"]}
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
